--- a/config/.env
+++ b/config/.env
@@ -1,6 +1,6 @@
 DATABASE_URL=postgresql://${{ PGUSER }}:${{PGPASSWORD}}@${{ PGHOST }}:${{ PGPORT }}/${{ PGDATABASE }}
 PGDATABASE=railway
-PGHOST=monorail.proxy.rlwy.net
-PGPORT=19916
+PGHOST=viaduct.proxy.rlwy.net
+PGPORT=37214
 PGUSER=postgres
-PGPASSWORD=IGGJONxSZEgJKYCpzrjhzWtysLYulKyz
+PGPASSWORD=SGSzeXqTFtuuxmbVOyoseyYBosjDbffo
